# grab-sampler

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
src/grabsampler/: __init__.py  sampler.py
src/grabsampler/sorter/: FixedOrdering.py  MeanBalance.py  OfflineMeanBalance.py  PairBalance.py  RandomReshuffling.py  SampleWReplacement.py  ShuffleOnce.py  SorterBase.py  __init__.py
src/grabsampler/sorter/beta/: AdaEMABalance.py  AdaMeanBalance.py  BatchBalance.py  EMABalance.py  NTKBalance.py  NTKEigen.py  NTKFixedBalance.py  NTKFixedEigen.py  OrderByNorm.py  RecursiveBalance.py  RecursivePairBalance.py  SignBalance.py  __init__.py
src/grabsampler/sorter/beta/functional/: NTK.py  __init__.py
src/grabsampler/utils/: EventTimer.py  __init__.py  estimator.py
src/grabsampler/utils/random_projection/: JLGaussianRP.py  JLVerySparseRP.py  KroneckerRP.py  RandomProjection.py  __init__.py
